# zendcli

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  setup.py  tsconfig.json  zendcli.py
.github/workflows/: ci.yml  publish.yml
artifacts/: security.md
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
skill/: SKILL.md
specs/: refactor-by-rust.spec  search-tickets.spec
src/: api.rs  api.ts  cli.ts  config.rs  config.ts  error.rs  main.rs
tests/: integration_test.rs
