[package]
name = "zendcli"
version = "2.0.0"
edition = "2021"
description = "Minimal Zendesk CLI for tickets and comments"
repository = "https://github.com/tplog/zendcli"
license = "MIT"

[[bin]]
name = "zend"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dirs = "6"
regex-lite = "0.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
